Add flags to native-image generation to remove JDK-level deprecation warnings
- Add --enable-native-access=ALL-UNNAMED to allow native access without warnings
- Add -J--sun-misc-unsafe-memory-access=allow to suppress Unsafe memory access warnings

These flags eliminate deprecation warnings that appear when building native images
with newer JDK versions.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>